# hexlet_django_blog

./: pyproject.toml
hexlet_django_blog/hexlet_django_blog/: asgi.py  settings.py  urls.py  views.py  wsgi.py
hexlet_django_blog/hexlet_django_blog/article/: urls.py  views.py
hexlet_django_blog/hexlet_django_blog/templates/: about.html  base.html  index.html
hexlet_django_blog/hexlet_django_blog/templates/articles/: index.html
